--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.thegroceryguys.user">
+    package="com.staging.thegroceryguys.user">
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="com.thegroceryguys.user.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.staging.thegroceryguys.user.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -17,7 +17,7 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <permission
-        android:name="com.thegroceryguys.user.permission.MAPS_RECEIVE"
+        android:name="com.staging.thegroceryguys.user.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
     <queries>
         <package android:name="com.google.android.apps.maps" />
