--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.thegroceryguys.user</string>
+	<string>com.staging.thegroceryguys.user</string>
 	<key>PROJECT_ID</key>
 	<string>thegroceryguys-68e6b</string>
 	<key>STORAGE_BUCKET</key>
