--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -21,80 +21,77 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  animated_splash_screen: ^1.2.0
+  async: ^2.8.1
+  badges: ^2.0.1
+  cached_network_image: ^3.0.0
+  carousel_slider: ^4.0.0
+  convex_bottom_bar: ^3.0.0
+  crypto: ^3.0.1
+  cupertino_icons: ^1.0.2
+  firebase_auth: 3.0.1
+  firebase_core: 1.4.0
+  firebase_messaging: 10.0.4
+  flat_segmented_control: ^0.1.0
   flutter:
     sdk: flutter
+  flutter_barcode_scanner: ^2.0.0-nullsafety.0
+  flutter_bloc: ^7.3.0
+  flutter_credit_card: ^3.0.0
+  flutter_facebook_login: ^3.0.0
+  flutter_full_pdf_viewer: ^1.0.6
+  flutter_google_places: ^0.3.0
+  flutter_html: ^2.0.0-nullsafety.0
+  flutter_local_notifications: ^8.2.0
   flutter_localizations:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
-  intl: ^0.17.0
-  percent_indicator: ^3.0.1
-  flutter_rating_bar: ^4.0.0
-  flutter_phoenix: ^1.0.0
-  flutter_bloc: ^7.3.0
-  grouped_buttons: ^1.0.4
-  carousel_slider: ^4.0.0
-  firebase_core: 1.4.0
-  firebase_auth: 3.0.1
-  flutter_local_notifications: ^8.2.0
-  firebase_messaging: 10.0.4
-  shared_preferences: ^2.0.8
-  toast: ^0.1.5
-  http: ^0.13.1
-  flutter_facebook_login: ^3.0.0
-  google_sign_in: ^5.1.1
-  flutter_barcode_scanner: ^2.0.0-nullsafety.0
-  image_picker: ^0.8.4+2
-  shimmer_animation: ^2.0.0
-  flutter_html: ^2.0.0-nullsafety.0
-  cached_network_image: ^3.0.0
-  geolocator: ^7.0.1
-  geocoder: ^0.2.1
-  google_maps_flutter: ^2.0.10
-  flutter_google_places: ^0.3.0
-  #  google_place: ^0.4.0
-  #  google_maps_webservice: ^0.0.19
-  google_place: ^0.4.0
-  mapbox_search: ^3.0.1+1
-  #  horizontal_calendar_widget: ^1.0.2
-  http_auth: ^1.0.0
   flutter_paystack: ^1.0.5
-  flutter_credit_card: ^3.0.0
-  marquee: ^2.0.0
-  pdf: ^3.1.0
-  flutter_full_pdf_viewer: ^1.0.6
-  path_provider: ^2.0.5
-  printing: ^5.0.4
+  flutter_phoenix: ^1.0.0
+  flutter_rating_bar: ^4.0.0
   flutter_share: ^2.0.0
-  badges: ^2.0.1
-  flutter_speed_dial: ^4.4.0+1
-  url_launcher: ^6.0.12
-  #  flutter_launch: ^0.2.0
-  flat_segmented_control: ^0.1.0
-  tree_view: ^0.0.5
-  razorpay_flutter: ^1.2.5
-  convex_bottom_bar: ^3.0.0
-  persistent_bottom_nav_bar: ^4.0.2
-  async: ^2.8.1
   flutter_slidable: ^0.6.0
-  timelines: ^0.1.0
-  sliding_up_panel: ^2.0.0+1
-  pinput: ^1.2.0
-  pin_code_text_field: ^1.8.0
-  pull_to_refresh: ^2.0.0
+  flutter_speed_dial: ^4.4.0+1
+  flutter_svg: ^0.21.0
+  geocoder: ^0.2.1
+  geolocator: ^7.0.1
+  google_maps_flutter: ^2.0.10
+  google_place: ^0.4.0
+  google_sign_in: ^5.1.1
+  grouped_buttons: ^1.0.4
+  http: ^0.13.1
+  http_auth: ^1.0.0
+  image_picker: ^0.8.4+2
+  intl: ^0.17.0
+  introduction_screen: ^3.0.0
+  mapbox_search: ^3.0.1+1
+  marquee: ^2.0.0
+  path_provider: ^2.0.5
   paytm_allinonesdk: ^1.1.3
+  pdf: ^3.1.0
+  percent_indicator: ^3.0.1
+  persistent_bottom_nav_bar: ^4.0.2
+  pin_code_text_field: ^1.8.0
+  pinput: ^1.2.0
+  printing: ^5.0.4
+  pull_to_refresh: ^2.0.0
+  razorpay_flutter: ^1.2.5
+  shared_preferences: ^2.0.8
+  shimmer_animation: ^2.0.0
   sign_in_with_apple: ^3.1.0
-  crypto: ^3.0.1
+  sliding_up_panel: ^2.0.0+1
+  timelines: ^0.1.0
+  toast: ^0.1.5
+  tree_view: ^0.0.5
+  url_launcher: ^6.0.12
 #  internet_connection_checker: ^0.0.1+1
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  change_app_package_name: ^1.0.0
   #  json_serializable: ^3.4.1
   #  intl_translation: ^0.17.9
   flutter_launcher_icons: ^0.9.0
-  change_app_package_name: ^1.0.0
   flutter_lints: ^1.0.0
+  flutter_test:
+    sdk: flutter
 
 flutter_icons:
   android: "ic_launcher"
@@ -109,13 +106,13 @@ flutter:
         - asset: fonts/ProductSans-Regular.ttf
         - asset: fonts/ProductSans-Bold.ttf
 
-
   assets:
     - assets/
     - assets/ProductImages/
     - assets/PaymentIcons/
     - assets/CategoryImages/
     - assets/HomeBanner/
+    - assets/IntroScreen/
     - assets/fonts/OpenSans-Regular.ttf
     - assets/fonts/OpenSans-Bold.ttf
     - assets/fonts/OpenSans-Italic.ttf
