--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   introduction_screen: ^3.0.0
   mapbox_search: ^3.0.1+1
   marquee: ^2.0.0
+  modal_progress_hud: ^0.1.3
   path_provider: ^2.0.5
   paytm_allinonesdk: ^1.1.3
   pdf: ^3.1.0
