New Wallet UI has been updated. Some changes in UI is pending. One Tab implementation is pending. Currently working on that.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/wallet/
     - assets/ProductImages/
     - assets/DrawerIcon/
     - assets/MyAccount/
